# dynaconf_test

./: .gitignore  pyproject.toml  readme.md  settings.toml  settings.yaml_  test_var.py
toml/: settings.toml_
