[tool.poetry]
name = "dynaconf_test"
version = "0.1.0"
description = "Teste de leitura de variaveis"
authors = ["Douglas Maciel d'Auriol Souza <ddauriol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = {extras = ["yaml"], version = "^2.2.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
